JQuery UI included
May be needed for draggable cards, popups etc

--- a/client/web/game.html
+++ b/client/web/game.html
@@ -5,6 +5,7 @@
 		<title>HotCit - Lobby</title>
 		<script data-main="js/game" src="js/libs/require.js"></script>
 		<link rel='stylesheet' href='css/game.css' type='text/css'>
+		<link rel='stylesheet' href='css/jquery-ui.css' type='text/css'>
 	</head>
 	<body>
     <div id='app'>
