Few changes due to meeting

--- a/client/web/game.html
+++ b/client/web/game.html
@@ -3,7 +3,7 @@
 		<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
     <!-- <meta http-equiv="refresh" content="2"> -->
 		<title>HotCit - Lobby</title>
-		<script data-main="js/game" src="js/libs/require.js"></script>
+		<script data-main="js/main" src="js/libs/require.js"></script>
 		<link rel='stylesheet' href='css/game.css' type='text/css'>
 		<link rel='stylesheet' href='css/jquery-ui.css' type='text/css'>
 	</head>
