Refactor + document + bug

--- a/client/web/game.html
+++ b/client/web/game.html
@@ -9,7 +9,6 @@
         <script src="js/libs/jquery-2.0.3.js"></script> <!-- dependency -->
         <script src="vendors/bootstrap/js/bootstrap.min.js"></script>
         <link rel='stylesheet' href='vendors/bootstrap/css/bootstrap.min.css' type='text/css'>
-        <!-- <link rel='stylesheet' href='vendors/bootstrap/css/bootstrap-theme.min.css' type='text/css'> -->
         <!-- /Bootstrap -->
 
 		<link rel='stylesheet' href='css/game.css' type='text/css'>
@@ -19,9 +18,9 @@
     <div id='app'>
 		<div id='players'></div>
 		<div id='player'></div>
-        <div style='width:300px'>
-            <div id='optionsView' class='well'></div>
+        <div style='width:300px; position: absolute; left:0px; top:0px;'>
             <div id='playerinturnView' class='well'></div>
+            <div id='optionsView' class='well'></div>
         </div>
         </div>
     </div>
