--- a/client/web/game.html
+++ b/client/web/game.html
@@ -17,11 +17,11 @@
 	<body>
     <div id='app'>
 		<div id='players'></div>
+        <div id='board'></div>
 		<div id='player'></div>
         <div style='width:300px; position: absolute; left:0px; top:0px;'>
             <div id='playerinturnView' class='well'></div>
             <div id='optionsView' class='well'></div>
-        </div>
         </div>
     </div>
   </body>
