PlayerView adapted for templates

--- a/client/web/templates.html
+++ b/client/web/templates.html
@@ -16,7 +16,7 @@
             <h3>Hand</h3>
             <div class='hand'>
                 {{#hand}}
-                    <img class='card' src='/resources/images/mdpi/{{.}}.png'/>
+                    <img class='card' src='/resources/images/mdpi/{{.}}.png' data-card='{{.}}'/>
                 {{/hand}}
             </div>
             
