--- a/client/web/game.html
+++ b/client/web/game.html
@@ -16,7 +16,7 @@
 	</head>
 	<body>
     <div id='app'>
-		<div id='players'></div>
+		<div id='opponents'></div>
         <div id='board'></div>
 		<div id='player'></div>
         <div style='width:300px; position: absolute; left:0px; top:0px;'>
