introduced simulate view + simulate controller

--- a/client/web/templates.html
+++ b/client/web/templates.html
@@ -59,7 +59,7 @@
 	<!---OPTION.HTML--->
 	<script id='option'>
 		<li>
-		    <button type='button' class='btn btn-primary'>
+		    <button type='button' class='btn btn-primary' style='width:250px'>
 		        {{Message}}
 		    </button>
 		</li>
@@ -88,6 +88,16 @@
 	<!---PLAYERTURN.HTML--->
 	<script id='playerTurn'>
 		<ul class='nav nav-pills' class='options'></ul>
+	</script>
+
+	<!---PLAYER_VIEW.HTML--->
+	<script id='player_view'>
+		<div class='Playerviews'>
+		    <div class='player'>
+		        <div class='city'></div>
+		        <div class='hand'></div>
+		    </div>
+		</div>
 	</script>
 
 	<!---SCORE.HTML--->
