--- a/client/web/game.html
+++ b/client/web/game.html
@@ -20,6 +20,7 @@
         <div id='board'></div>
 		<div id='player'></div>
         <div style='width:300px; position: absolute; left:0px; top:0px;'>
+            <div id='simulateView' class='well'></div>
             <div id='playerinturnView' class='well'></div>
             <div id='optionsView' class='well'></div>
         </div>
