--- a/client/web/game.html
+++ b/client/web/game.html
@@ -19,10 +19,12 @@
 		<div id='opponents'></div>
         <div id='board'></div>
 		<div id='player'></div>
-        <div style='width:300px; position: absolute; left:0px; top:0px;'>
+        <div style='width:300px; position: absolute; left:10px; top:10px;'>
             <div id='simulateView' class='well'></div>
             <div id='playerinturnView' class='well'></div>
             <div id='optionsView' class='well'></div>
+        </div>
+        <div id='characterView' style='width:300px; position: absolute; right:10px; top:10px;'>
         </div>
     </div>
   </body>
