--- a/client/web/game.html
+++ b/client/web/game.html
@@ -15,17 +15,6 @@
 		<link rel='stylesheet' href='css/jquery-ui.css' type='text/css'>
 	</head>
 	<body>
-    <div id='app'>
-		<div id='opponents'></div>
-        <div id='board'></div>
-		<div id='player'></div>
-        <div style='width:300px; position: absolute; left:10px; top:10px;'>
-            <div id='simulateView' class='well'></div>
-            <div id='playerinturnView' class='well'></div>
-            <div id='optionsView' class='well'></div>
-        </div>
-        <div id='characterView' style='width:300px; position: absolute; right:10px; top:10px;'>
-        </div>
-    </div>
+    <div id='app'></div>
   </body>
 </html>
