html design, first finished prototype
TODO: refactor, dry, cleanup, etc. =)

--- a/client/web/html_design/index.html
+++ b/client/web/html_design/index.html
@@ -21,7 +21,7 @@
                 <div class='current_player'>
                     afk
                     <img class='icon' 
-                         src='img/character_small_icon.png' />
+                         src='img/merchant_icon.png' />
                 </div>
                 <div class='status_message'>
                     mis is in turn - 
@@ -41,10 +41,207 @@
                              src='img/points.png' />
                     </div>
                 </div>    
-            </nav> 
-            
+            </nav>             
             <div id='content' class='row'>
-                <section id='board'>board</section>
+                <section id='board' class='col-xs-12'>
+                    <div class='opponents row'>
+                        <div class='opponent col-xs-4'>
+                            <div>
+                                <div class='row'>
+                                    <div class='col-xs-2'>
+                                        <div class='pid text-center'>rko</div>    
+                                        <div class='token'>
+                                            <img src='img/magician_icon.png' 
+                                                 class='img-circle'
+                                                 width=30/>
+                                        </div>
+                                    </div>
+                                    <div class='hand col-xs-10'>
+                                        <img class='card'
+                                             src='img/facedown2.png' 
+                                             width='45'/>
+                                        <img class='card'
+                                             src='img/facedown2.png' 
+                                             width='45'/>
+                                        <img class='card'
+                                             src='img/facedown2.png' 
+                                             width='45'/>
+                                        <!--<img class='card'
+                                             src='img/facedown2.png' 
+                                             width='45'/>
+                                        <img class='card'
+                                             src='img/facedown2.png' 
+                                             width='45'/>
+                                        <img class='card'
+                                             src='img/facedown2.png' 
+                                             width='45'/>
+                                        <img class='card'
+                                             src='img/facedown2.png' 
+                                             width='45'/>-->
+                                    </div>
+                                </div>
+                                <div class='districts row'>
+                                    <div class='col-xs-12'>
+                                        <img class='card'
+                                             src='img/church.png' />
+                                        <img class='card'
+                                             src='img/harbor.png' />
+                                        <img class='card'
+                                             src='img/prison.png' />
+                                        <!--<img class='card'
+                                             src='img/prison.png' />
+                                        <img class='card'
+                                             src='img/prison.png' />
+                                        <img class='card'
+                                             src='img/prison.png' />
+                                        <img class='card'
+                                             src='img/prison.png' />
+                                        <img class='card'
+                                             src='img/prison.png' />-->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class='opponent col-xs-4'>
+                            <div>
+                                <div class='row'>
+                                    <div class='col-xs-2'>
+                                        <div class='pid text-center'>rko</div>    
+                                        <div class='token'>
+                                            <img src='img/king_icon.png' 
+                                                 class='img-circle'
+                                                 width=30/>
+                                        </div>
+                                    </div>
+                                    <div class='hand col-xs-10'>
+                                        <img class='card'
+                                             src='img/facedown2.png' 
+                                             width='45'/>
+                                        <img class='card'
+                                             src='img/facedown2.png' 
+                                             width='45'/>
+                                        <!--<img class='card'
+                                             src='img/facedown2.png' 
+                                             width='45'/>-->
+                                    </div>
+                                </div>
+                                <div class='districts row'>
+                                    <div class='col-xs-12'>
+                                        <img class='card'
+                                             src='img/church.png' />
+                                        <img class='card'
+                                             src='img/harbor.png' />
+                                        <img class='card'
+                                             src='img/prison.png' />
+                                        <img class='card'
+                                             src='img/battlefield.png' />
+                                        <!--<img class='card'
+                                             src='img/prison.png' />
+                                        <img class='card'
+                                             src='img/prison.png' />
+                                        <img class='card'
+                                             src='img/prison.png' />
+                                        <img class='card'
+                                             src='img/prison.png' />-->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class='opponent col-xs-4'>
+                            <div>
+                                <div class='row'>
+                                    <div class='col-xs-2'>
+                                        <div class='pid text-center'>rko</div>    
+                                        <div class='token'>
+                                            <img src='img/bishop_icon.png' 
+                                                 class='img-circle'
+                                                 width=30/>
+                                        </div>
+                                    </div>
+                                    <div class='hand col-xs-10'>
+                                        <img class='card'
+                                             src='img/facedown2.png' 
+                                             width='45'/>
+                                        <img class='card'
+                                             src='img/facedown2.png' 
+                                             width='45'/>
+                                        <img class='card'
+                                             src='img/facedown2.png' 
+                                             width='45'/>
+                                    </div>
+                                </div>
+                                <div class='districts row'>
+                                    <div class='col-xs-12'>
+                                        <img class='card'
+                                             src='img/docks.png' />
+                                        <!--<img class='card'
+                                             src='img/harbor.png' />
+                                        <img class='card'
+                                             src='img/prison.png' />
+                                        <img class='card'
+                                             src='img/prison.png' />
+                                        <img class='card'
+                                             src='img/prison.png' />
+                                        <img class='card'
+                                             src='img/prison.png' />
+                                        <img class='card'
+                                             src='img/prison.png' />
+                                        <img class='card'
+                                             src='img/prison.png' />-->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class='center row'>
+                        <div class='gold pull-left'>
+                            <img src='img/many_coins.png' 
+                                 width='75' /></div>
+                        <div class='deck pull-right'>
+                            <img class='card'
+                                 src='img/facedown2.png' 
+                                 width='75' />
+                        </div>
+                    </div>
+                    <div class='player row'>
+                        <div class='districts col-xs-6'>
+                            <img class='card'
+                                 src='img/temple.png' />
+                            <img class='card'
+                                 src='img/school_of_magic.png' />
+                            <img class='card'
+                                 src='img/watchtower.png' />
+                            <img class='card'
+                                 src='img/manor.png' />
+                            <img class='card'
+                                 src='img/prison.png' />
+                            <!--<img class='card'
+                                 src='img/prison.png' />
+                            <img class='card'
+                                 src='img/prison.png' />
+                            <img class='card'
+                                 src='img/prison.png' />-->
+                        </div>
+                        <div class='hand col-xs-6'>
+                            <img class='card'
+                                 src='img/battlefield.png' />
+                            <img class='card'
+                                 src='img/castle.png' />
+                            <img class='card'
+                                 src='img/church.png' />
+                            <img class='card'
+                                 src='img/graveyard.png' />
+                            <img class='card'
+                                 src='img/cathedral.png' />
+                            <!--<img class='card'
+                                 src='img/prison.png' />
+                            <img class='card'
+                                 src='img/prison.png' />
+                            <img class='card'
+                                 src='img/prison.png' />-->
+                        </div>
+                    </div>
+                </section>
                 <aside id='sidebar'>
                     <div id='scoreboard'>
                         <table>
