andy icons, logo, bugfix cardspread
cardspread now larger, and less css, did something, it seemed to do the
trick... (me, idiot)

--- a/client/web/html_design/index.html
+++ b/client/web/html_design/index.html
@@ -144,7 +144,7 @@
                                 <div class='info'>
                                     <div class='pid'>rko</div>    
                                     <div class='token'>
-                                        <img src='img/bishop_icon.png' 
+                                        <img src='img/assassin_icon.png' 
                                              class='img-circle' />
                                     </div>
                                 </div>
@@ -203,27 +203,33 @@
                             <img class='card grayscale'
                                  src='img/facedown2.png' />
                         </div>
-                        <div class='hand'>
-                            <img class='card'
-                                 src='img/battlefield.png' />
-                            <img class='card'
-                                 src='img/castle.png' />
-                            <img class='card'
-                                 src='img/church.png' />
-                            <img class='card'
-                                 src='img/graveyard.png' />
-                            <img class='card'
-                                 src='img/cathedral.png' />
-                            <img class='card grayscale'
-                                 src='img/facedown2.png' />
-                            <img class='card grayscale'
-                                 src='img/facedown2.png' />
-                            <img class='card grayscale'
-                                 src='img/facedown2.png' />
-                            <img class='card grayscale'
-                                 src='img/facedown2.png' />
-                            <img class='card grayscale'
-                                 src='img/facedown2.png' />
+                        <div class='col-xs-6 text-center'>
+                            <div class='hand'>
+                                <img class='card'
+                                     src='img/battlefield.png' />
+                                <img class='card'
+                                     src='img/castle.png' />
+                                <img class='card'
+                                     src='img/church.png' />
+                                <img class='card'
+                                     src='img/graveyard.png' />
+                                <img class='card'
+                                     src='img/cathedral.png' />
+    
+                                <img class='card grayscale'
+                                     src='img/facedown2.png' />
+                                <img class='card grayscale'
+                                     src='img/facedown2.png' />
+<!--
+                                <img class='card grayscale'
+                                     src='img/facedown2.png' />
+                                <img class='card grayscale'
+                                     src='img/facedown2.png' />
+                                <img class='card grayscale'
+                                     src='img/facedown2.png' />
+-->
+    
+                            </div>
                         </div>
                     </div>
                 </section>
@@ -269,6 +275,7 @@
                                 </tr>
                             </tbody>
                         </table>
+                        <img class='logo' src='img/logo.png' />
                     </div>                    
                     <div id='terminal'>
                         <ul>
