added card-overlay css

--- a/client/web/html_design/index.html
+++ b/client/web/html_design/index.html
@@ -79,7 +79,8 @@
                                     </div>
                                 </div>
                                 <div class='hand'>
-                                    <img class='card passive'
+                                    <div class='card-overlay'>0</div>
+                                    <img class='card'
                                          src='img/facedown2.png'/>
                                 </div>
                             </div>
@@ -114,6 +115,7 @@
                                     </div>
                                 </div>
                                 <div class='hand'>
+                                    <div class='card-overlay'>6</div>
                                     <img class='card'
                                          src='img/facedown2.png' />
                                 </div>
@@ -149,6 +151,7 @@
                                     </div>
                                 </div>
                                 <div class='hand'>
+                                    <div class='card-overlay'>4</div>
                                     <img class='card'
                                          src='img/facedown2.png' />
                                 </div>
