scoreboard coupled to model

--- a/client/web/client_working_prototype/index.html
+++ b/client/web/client_working_prototype/index.html
@@ -15,6 +15,17 @@
         <link rel="stylesheet" href="styles/css/main.css">
         
         <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script> -->
+        <style>
+            #scoreboard .logo.active {
+                cursor: pointer;   
+            }
+            #sidebar #scoreboard tr.current_player {
+                color: black;
+            }
+            #sidebar #scoreboard tr.current_player {
+                background: #33cc33;   
+            }
+        </style>
     </head>
     <body>
         
